--- a/qecto-frontend/src/index.css
+++ b/qecto-frontend/src/index.css
@@ -1,3 +1,4 @@
+@import "leaflet/dist/leaflet.css";
 body {
   margin: 0;
   font-family:"Vazirmatn", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
