--- a/qecto-frontend/src/Styles/global.css
+++ b/qecto-frontend/src/Styles/global.css
@@ -1,8 +1,12 @@
-/* src/styles/global.css */
-@import 'bootstrap/dist/css/bootstrap.rtl.min.css';
-@import 'vazirmatn/Vazirmatn-font-face.css';
-@import 'bootstrap-icons/font/bootstrap-icons.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* حالا سایر importها بیان بعد از Tailwind */
+@import "bootstrap/dist/css/bootstrap.rtl.min.css";
+@import "vazirmatn/Vazirmatn-font-face.css";
+@import "bootstrap-icons/font/bootstrap-icons.css";
 @import "leaflet/dist/leaflet.css";
 
-/* استایل‌های سفارشی */
-@import './index.css';
+/* استایل‌های سفارشی خودت */
+@import "./index.css";
