--- a/qecto-frontend/src/Styles/index.css
+++ b/qecto-frontend/src/Styles/index.css
@@ -1,7 +1,7 @@
-@import "leaflet/dist/leaflet.css";
 body {
   margin: 0;
-  font-family: "Vazirmatn", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+  font-family: "Vazirmatn", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -36,4 +36,12 @@ body {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.text-orange-important {
+  @apply text-orange-600 !important;
+}
+
+a {
+  text-decoration: none !important;
 }
