--- a/qecto-frontend/src/Styles/index.css
+++ b/qecto-frontend/src/Styles/index.css
@@ -44,3 +44,13 @@ body {
 a {
   text-decoration: none !important;
 }
+
+.page-content {
+  margin-top: 80px; /* فاصله از بالا برای دسکتاپ */
+}
+
+@media (max-width: 1024px) {
+  .page-content {
+    margin-top: 0;
+  }
+}
