--- a/qecto-frontend/src/Styles/index.css
+++ b/qecto-frontend/src/Styles/index.css
@@ -51,6 +51,7 @@ a {
 
 @media (max-width: 1024px) {
   .page-content {
-    margin-top: 0;
+    margin-top: 64px;
+    margin-bottom: 96px;
   }
 }
