--- a/qecto-frontend/src/Styles/index.css
+++ b/qecto-frontend/src/Styles/index.css
@@ -46,16 +46,15 @@ a {
 }
 
 .page-content {
-  margin-top: 80px !important;
+  margin-top: 80px;
   min-height: calc(100vh - 80px); /* اطمینان از پر بودن صفحه */
   background-color: inherit; /* هم‌رنگ با بدنه */
 }
 
 @media (max-width: 1024px) {
   .page-content {
-    margin-top: 64px !important;
-    margin-bottom: 96px !important;
-    padding-bottom: 96px !important;
+    margin-top: 64px;
+    margin-bottom: 96px;
     min-height: calc(100vh - 160px); /* همزمان top + bottom */
   }
 }
